# chatgpt-data

./: .gitignore  .name_matches  .windsurfrules  CHANGELOG.md  CLAUDE.md  Dockerfile  FARGATE_DEPLOYMENT.md  Makefile  README.md  RELEASE_NOTES.md  cloudformation-fargate.yml  cloudformation-vpc.yml  data.tgz  docker-compose.yml  index.html  pipeline.Dockerfile  pyproject.toml  server.py
api_docs/: openapi.json
chatgpt_data/: __init__.py
copilot/: Proofpoint.xlsx  Proofpoint_AI_Licenses.csv  eng_leaders.txt  licenses.csv
data/: message_outliers_by_period.csv  message_outliers_overall.csv  message_pattern_outliers.csv  non_engaged_users_report.csv  power_users.csv  user_engagement_report.csv
examples/: fetch_conversations.py  get_convo.py
rawdata/: AD_export.csv  glossary_gpt_engagement.csv  glossary_user_engagement.csv  management_chains.json  proofpoint_gpt_engagement_20250112_20250125.csv  proofpoint_gpt_engagement_20250126_20250201.csv  proofpoint_gpt_engagement_20250202_20250208.csv  proofpoint_gpt_engagement_20250209_20250215.csv  proofpoint_gpt_engagement_20250216_20250222.csv  proofpoint_gpt_engagement_20250223_20250301.csv  proofpoint_user_engagement_20250112_20250125.csv  proofpoint_user_engagement_20250126_20250201.csv  proofpoint_user_engagement_20250202_20250208.csv  proofpoint_user_engagement_20250209_20250215.csv  proofpoint_user_engagement_20250216_20250222.csv  proofpoint_user_engagement_20250223_20250301.csv
scripts/: dashboard_deployment_demo.sh  deploy_to_fargate.py  deploy_to_fargate.sh  deploy_to_s3.py  generate_trends.sh  license_counts.py  (+2 more)
(+33 files in other folders)
