[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatgpt-data"
version = "1.1.0"
description = "A project that provides analysis of ChatGPT usage data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Proofpoint" },
]
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "requests>=2.25.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
user_trends = "chatgpt_data.cli.user_trends:main"
gpt_trends = "chatgpt_data.cli.gpt_trends:main"
all_trends = "chatgpt_data.cli.all_trends:main"
get_usage_data = "chatgpt_data.cli.api_reports:main"
management_chains = "chatgpt_data.utils.management_chain:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "ruff>=0.0.254",
    "mypy>=1.0.0", 
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
